# linkml-runtime

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  ChangeLog  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: check-dependencies.yaml  lint.yaml  main.yaml  pr-test.yaml  pypi-publish.yaml  test-upstream.yaml
linkml_runtime/: __init__.py  csvutils.py  exceptions.py
linkml_runtime/dumpers/: delimited_file_dumper.py  json_dumper.py  rdf_dumper.py  rdflib_dumper.py  yaml_dumper.py
linkml_runtime/index/: object_index.py
linkml_runtime/linkml_model/: __init__.py  annotations.py  datasets.py  extensions.py  linkml_files.py  mappings.py  meta.py  types.py  units.py  validation.py
linkml_runtime/linkml_model/excel/: meta.xlsx
linkml_runtime/linkml_model/jsonld/: meta.context.jsonld  meta.jsonld
linkml_runtime/linkml_model/jsonschema/: meta.schema.json
linkml_runtime/linkml_model/model/schema/: meta.yaml
linkml_runtime/linkml_model/owl/: meta.owl.ttl
linkml_runtime/linkml_model/prefixmap/: meta.yaml
linkml_runtime/linkml_model/protobuf/: meta.proto
linkml_runtime/linkml_model/shacl/: meta.shacl.ttl
linkml_runtime/linkml_model/sqlschema/: meta.sql
linkml_runtime/loaders/: __init__.py  context_flattener.py  csv_loader.py  delimited_file_loader.py  json_loader.py  loader_root.py  passthrough_loader.py  rdf_loader.py  rdflib_loader.py  tsv_loader.py  yaml_loader.py
linkml_runtime/processing/: inlining.py  referencevalidator.py  validation_datamodel.py
linkml_runtime/types/: enum.py
linkml_runtime/utils/: context_utils.py  converter.py  csvutils.py  curie_validator.py  curienamespace.py  dataclass_extensions_376.py  dataclass_patch.py  enumerations.py  eval_utils.py  formatutils.py  inference_utils.py  introspection.py  metamodelcore.py  namespaces.py  pattern.py  permissiblevalueimpl.py  ruleutils.py  schema_builder.py  schemaops.py  schemaview.py  slot.py  yamlutils.py
linkml_runtime/utils/jsonasobj2/: __init__.py  _jsonobj.py  extendednamespace.py
linkml_runtime/walkers/: object_walker.py
notebooks/: SchemaView_BioLink.ipynb  SchemaView_Monarch.ipynb  monarch-tutorial.ipynb
tests/: __init__.py
tests/support/: clicktestcase.py  filters.py  test_environment.py
tests/test_index/: test_object_index.py
tests/test_index/model/: container_test.py
tests/test_issues/: test_dataclass_extensions_376.py  test_issue_1355.py  test_issue_355.py  test_issue_368_enums.py  test_issue_626.py  test_issue_718.py  test_issue_8.py  test_issue_new.py  test_linkml_issue_1041.py  test_linkml_issue_1126.py  test_linkml_issue_1143.py  test_linkml_issue_478.py  test_linkml_issue_497.py  test_linkml_issue_576.py  test_linkml_issue_590.py  test_linkml_issue_817.py  test_linkml_issue_840.py  test_linkml_issue_998.py  test_linkml_runtime_issue_1317.py  test_linkml_runtime_issue_2475.py  test_linkml_runtime_issue_68.py
tests/test_issues/input/: issue_355.py  issue_368.py  issue_368_imports.py  kitchen_sink.py  linkml_issue_1041.yaml  linkml_issue_497.py  linkml_issue_497.yaml  linkml_issue_840.yaml  linkml_issue_840_import.yaml
tests/test_issues/models/: linkml_issue_576.py  model_817.py
tests/test_linkml_model/: test_linkml_files.py
tests/test_loaders_dumpers/: test_csv_tsv_loader_dumper.py  test_dumpers_personinfo_pydantic.py  test_dumpers_pydantic.py  test_enum.py  test_issue_429.py  test_loaders.py  test_loaders_dumpers.py  test_loaders_pydantic.py  test_rdf_prefixes.py  test_rdflib_dumper.py
tests/test_loaders_dumpers/input/: issue_429_data.yaml  issue_429_schema.yaml
tests/test_loaders_dumpers/models/: books_normalized.py  books_normalized_pydantic.py  enum_model.py  issue_429_schema.py  kitchen_sink_pydantic.py  node_object.py  personinfo.py  personinfo_test_issue_429.py  phenopackets.py  termci_schema.py
tests/test_processing/: test_inlining_processor.py  test_referencevalidator.py
tests/test_utils/: test_context_utils.py  test_curienamespace.py  test_dict_utils.py  test_distroutils.py  test_eval_utils.py  test_formatutils.py  test_inlined_as_dict_forms.py  test_inlined_as_list_forms.py  test_introspection.py  test_metamodelcore.py  test_namespaces.py  test_ruleutils.py  test_schema_as_dict.py  test_schema_extension.py  test_schemaview.py  test_walker_utils.py
tests/test_utils/input/: CurieNamespace_test.py  core.yaml  get_slot_with_ambiguous_attributes.yaml  inference-example.yaml  inlined_as_dict.py  inlined_as_list.py  kitchen_sink.yaml  kitchen_sink_nodefaultprefix.yaml  kitchen_sink_noimports.yaml  schema_extension.yaml  schema_extension_example.yaml  schemaview_is_inlined.yaml
tests/test_utils/model/: inference_example.py  schema_extension.py
tests/tests_csv_conversion/: test_csvgen.py
