[tool.poetry]
name = "linkml-runtime"
version = "0.0.0"
description = "Runtime environment for LinkML, the Linked open data modeling language"
authors = [
    "Chris Mungall <cjmungall@lbl.gov>",
    "Harold Solbrig <solbrig@jhu.edu>",
    "Sierra Moxon <smoxon@lbl.gov>",
    "Bill Duncan <wdduncan@gmail.com>",
    "Harshad Hegde <hhegde@lbl.gov>"
]

readme = "README.md"

homepage = "https://github.com/linkml/linkml-runtime"
repository = "https://github.com/linkml/linkml-runtime"
documentation = "https://github.com/linkml/linkml-runtime"

keywords = ["linkml", "metamodel", "schema visualization", "rdf", "owl", "yaml"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

packages = [
    { include = "linkml_runtime" }
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.scripts]
comparefiles = "linkml_runtime.utils.comparefiles:cli"
linkml-normalize = "linkml_runtime.processing.referencevalidator:cli"

[tool.poetry.dependencies]
python = "^3.9"
click = "*"
deprecated = "*"
hbreader = "*"
json-flattener = ">=0.1.9"
jsonasobj2 = "==1.*,>=1.0.0,>=1.0.4"
jsonschema = ">=3.2.0"
prefixcommons = ">=0.1.12"
pyyaml = "*"
rdflib = ">=6.0.0"
requests = "*"
prefixmaps = ">=0.1.4"
curies = ">=0.5.4"
pydantic = ">=1.10.2, <3.0.0"

[tool.poetry.group.tests.dependencies]
coverage = "^6.2"
requests-cache = "^1.2.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.6.9"
black = "^24.10.0"
codespell = "^2.3.0"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]
force-exclude = '''
/(
  # default exclude
  \.direnv|\.eggs|\.git|\.hg|\.ipynb_checkpoints|\.mypy_cache|\.nox|\.pytest_cache|\.ruff_cache|\.tox|\.svn|\.venv|\.vscode|__pypackages__|_build|buck-out|build|dist|venv
  # additional exclude
  | tests.*/output
  | __snapshots__
  | docs
  | examples
  | notebooks
)/
'''


[tool.ruff]
line-length = 120
target-version = "py39"

# -- Rule selection --
select = [
  "E",  # pycodestyle errors
  "F",  # Pyflakes
  "I",  # isort
  "UP", # pyupgrade
]
force-exclude = true
extend-ignore = ["E203"]

# -- Exclude files --
extend-exclude = [
    "tests/**/output",
    "tests/**/input",
    "tests/**/__snapshots__",
    "notebooks/"
]

[tool.codespell]
skip = '.git,*.pdf,*.svg,./tests,pyproject.toml,*.dill,poetry.lock'
# Ignore table where words could be split across rows
# Ignore shortcut specifications like [Ff]alse
ignore-regex = '(\|.*\|.*\|.*\||\[[A-Z][a-z]\][a-z][a-z])'
ignore-words-list = 'mater,connexion,infarction,thirdparty'
quiet-level = 3


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
