[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "linkml-runtime"
description = "Runtime environment for LinkML, the Linked open data modeling language"
authors = [
  {name = "Chris Mungall", email = "cjmungall@lbl.gov"},
  {name = "Harold Solbrig", email = "solbrig@jhu.edu"},
  {name = "Sierra Moxon", email = "smoxon@lbl.gov"},
  {name = "Bill Duncan", email = "wdduncan@gmail.com"},
  {name = "Harshad Hegde", email = "hhegde@lbl.gov"},
]
license = "CC0-1.0"
license-files = ["LICENSE"]
homepage = "https://github.com/linkml/linkml-runtime"
repository = "https://github.com/linkml/linkml-runtime"
documentation = "https://github.com/linkml/linkml-runtime"
readme = "README.md"
keywords = ["linkml", "metamodel", "schema visualization", "rdf", "owl", "yaml"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
include = ["linkml_runtime"]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "click",
    "deprecated",
    "hbreader",
    "json-flattener >=0.1.9",
    "jsonasobj2 ==1.*,>=1.0.0,>=1.0.4",
    "jsonschema >=3.2.0",
    "prefixcommons >=0.1.12",
    "pyyaml",
    "rdflib >=6.0.0",
    "requests",
    "prefixmaps >=0.1.4",
    "curies >=0.5.4",
    "pydantic >=1.10.2, <3.0.0",
    "isodate >=0.7.2, <1.0.0; python_version < '3.11'",
]

[project.scripts]
comparefiles = "linkml_runtime.utils.comparefiles:cli"
linkml-normalize = "linkml_runtime.processing.referencevalidator:cli"

[tool.poetry]
requires-poetry = ">=2.0"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = ">=1.8.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
coverage = "^6.2"
requests-cache = "^1.2.0"

[tool.poetry.group.tests.dependencies]
coverage = "^6.2"
requests-cache = "^1.2.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.6.9"
black = "^24.10.0"
codespell = "^2.3.0"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]
force-exclude = '''
/(
  # default exclude
  \.direnv|\.eggs|\.git|\.hg|\.ipynb_checkpoints|\.mypy_cache|\.nox|\.pytest_cache|\.ruff_cache|\.tox|\.svn|\.venv|\.vscode|__pypackages__|_build|buck-out|build|dist|venv
  # additional exclude
  | tests.*/output
  | __snapshots__
  | docs
  | examples
  | notebooks
)/
'''

[tool.ruff]
line-length = 120
target-version = "py39"
force-exclude = true

# -- Exclude files --
extend-exclude = [
    "linkml_runtime/linkml_model/**/*.py",
    "notebooks/**"
]

[tool.ruff.lint]
# -- Rule selection --
select = [
  "E",  # pycodestyle errors
  "F",  # Pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "T100", # no debugger imports/usages
]
extend-ignore = [
    "E203",
]
pyupgrade.keep-runtime-typing = true # until we drop 3.9

[tool.ruff.lint.per-file-ignores]
"tests/**/**.py" = ["F841", "E501", "F842", "E741"] # I ain't fixing all that


[tool.codespell]
skip = '.git,*.pdf,*.svg,./tests,pyproject.toml,*.dill,poetry.lock,*.ipynb,./linkml_runtime/linkml_model/*'
# Ignore table where words could be split across rows
# Ignore shortcut specifications like [Ff]alse
ignore-regex = '(\|.*\|.*\|.*\||\[[A-Z][a-z]\][a-z][a-z])'
ignore-words-list = 'mater,connexion,infarction,thirdparty'
quiet-level = 3
